@@ -15,6 +15,8 @@ AC_SUBST(VERSION)
 AC_PROG_CC
 AC_CHECK_PROGS(SED, [gnused gsed sed])
 AC_CHECK_PROGS(AWK, [gnuawk gawk awk])
+AC_CHECK_PROGS(UNZIP, [gunzip])
+AC_CHECK_PROGS(TAR, [gtar tar])
 AC_DEFUN(AM_PROG_INSTALL,
 [AC_REQUIRE([AC_PROG_INSTALL])
 test -z "$INSTALL_SCRIPT" && INSTALL_SCRIPT='${INSTALL_PROGRAM}'
@@ -117,6 +119,61 @@ AC_SUBST(PLATFORM_SPECIFIC)
    *) PSNAME="Unknown (${PLATFORM_SPECIFIC})";;
 esac]
 AC_MSG_RESULT($PSNAME)
+#
+# Filter list
+#
+AC_ARG_WITH(filters,
+[  --with-filters          Enumerate filter list],
+[
+  AC_MSG_CHECKING([default filters])
+  LIST="";
+  for F in "${withval}"; do
+     case ${F} in
+     zip|ZIP)
+        LIST="${LIST} zip";
+        FILTERSSOURCES="${FILTERSSOURCES} \$(ZIPSOURCES)";
+        FILTERSOBJECTS="${FILTERSOBJECTS} \$(ZIPOBJECTS)";
+	ZIP_LIBRARY="\$(ZIP_LIBRARY)";
+        ZIP_INCLUDED="zlib";;
+     *)
+        AC_MSG_ERROR([unknown protocol ${P}])
+        ;;
+      esac;
+  done
+  AC_MSG_RESULT([${LIST}])
+],
+[
+AC_MSG_CHECKING([default filters])
+FILTERSSOURCES="";
+FILTERSOBJECTS="";
+ZIP_LIBRARY="";
+ZIP_INCLUDED="";
+AC_MSG_RESULT([none])
+])
+if test "$ZIP_INCLUDED" = "zlib"; then
+  AC_MSG_CHECKING([configure zlib])
+  cd Garlic;
+  if test -f ${ZIP_INCLUDED}.tar.gz; then
+     ${UNZIP} ${ZIP_INCLUDED}.tar.gz;
+  fi;
+  if test -f ${ZIP_INCLUDED}.tar; then
+     ${TAR} xf ${ZIP_INCLUDED}.tar;
+  fi;
+  if test -d ${ZIP_INCLUDED}; then
+     (cd ${ZIP_INCLUDED}; ./configure) 2>&1 >/dev/null;
+     if test "$?" = "0"; then
+        AC_MSG_RESULT([done])
+     else
+        AC_MSG_RESULT([failed])
+     fi
+  else
+     AC_MSG_RESULT([failed])
+  fi
+  cd ..
+fi
+AC_SUBST(FILTERSSOURCES)
+AC_SUBST(FILTERSOBJECTS)
+AC_SUBST(ZIP_LIBRARY)
 #
 # Protocol list
 #
